--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checking</title>
+    <title>Java Script</title>
+    <link rel="icon" href="/assets/JavaScript.png">
 </head>
 <body>
-    <h1>Hellooo</h1>
+    <h1>Hellooooooooooooooooooooooooo</h1>
+    <script src="app.js"></script>
 </body>
 </html>
