--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="icon" href="/assets/JavaScript.png">
 </head>
 <body>
-    <h1>Tu hi jese rehmat, tu hi hoor, kohinoor, tu hi dhoop, ye fitoor, wo fitoor, tu itni khoobsurat ke me likhne pe majboor
-        <br>
-        Shayar: TY 🚬
-    </h1>
+    <p id="myPara"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aliquam sunt ipsum sed cupiditate. 
+        Itaque accusantium in vitae perferendis repellat, earum adipisci dolorem nihil optio velit voluptas saepe assumenda nemo. 
+        Salam wasakam okay left right left you he she shemale female male gender equality good to know them answers.
+    </P>
+    <button onclick="readmoreparagraph()">readmore</button>
+    <button onclick="readlessparagraph()">readless</button>
     <script src="app.js"></script>
 </body>
 </html>
