--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         Itaque accusantium in vitae perferendis repellat, earum adipisci dolorem nihil optio velit voluptas saepe assumenda nemo. 
         Salam wasakam okay left right left you he she shemale female male gender equality good to know them answers.
     </P>
-    <button onclick="readmoreparagraph()">readmore</button>
-    <button onclick="readlessparagraph()">readless</button>
+    <button onclick="main()" id="myBTN">readmore</button>
+
     <script src="app.js"></script>
 </body>
 </html>
