--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <link rel="icon" href="/assets/JavaScript.png">
 </head>
 <body>
-    <p id="myPara"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aliquam sunt ipsum sed cupiditate. 
-        Itaque accusantium in vitae perferendis repellat, earum adipisci dolorem nihil optio velit voluptas saepe assumenda nemo. 
-        Salam wasakam okay left right left you he she shemale female male gender equality good to know them answers.
-    </P>
-    <button onclick="main()" id="myBTN">readmore</button>
-
+<!-- <form>
+    <input type="text" id="name" 
+</form>     -->
+    
     <script src="app.js"></script>
 </body>
 </html>
