--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <input type="text" id="name" 
 </form>     -->
 
+<h1><B>Insaan Bhi kya Cheez Hai Aik Me Wafa Nhi Aur Doosre Ko Wafa Ki Umeed Hai, Insaan Bhi kya Cheez Hai Jhoot Ki Saza Nhi Aur Tumake Lagane Pe Yaha Deals Hai</B></h1>
+<br>
+<p>Shayar: TY🚬</p>
+
     <script src="app.js"></script>
 </body>
 </html>
